# postgres-course-msu

./: .gitignore  README.md
lab1/: 01_ny_prices.sql  02_with_top.sql  03_seats_stat.sql  04_distance_km.sql
lab2.1/: README.md
lab2.2/: artdb_creations.sql  artdb_inserts.sql  constraints.sql
lab2.3/: 01_realism_moscow.sql  02_sculpt_artnow.sql  03_paint19cent.sql  del_02_typesnotuse.sql  upd_01_buying.sql  upd_03_addsizes.sql
lab2.4/: read_c_scenario.sql  read_unc_scenario.sql  rep_read_scenario.sql  serializable_scenario.sql  trigger.sql
lab3.1/: README.md  creations.sql  creations_2.sql  gen.ipynb  gen.py  pyproject.toml  test.py  tst.ipynb  vin.py
lab3.2/: roles_views.sql
lab3.3/: func_01_avgconv.sql  func_01_avgconv_table.sql  func_02_relocate.sql  tests.sql
lab3.4/: index.sql
