[tool.poetry]
name = "db-gen"
version = "0"
description = ""
authors = ["pbedrin <pbedrin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.64.1"
faker = "^15.1.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
